fix alignment by replacing space with 0

--- a/_css/mal.css
+++ b/_css/mal.css
@@ -37,7 +37,7 @@ figure { margin: 0; }
   text-align: center;
 }
 
-#space { display: none; }
+#space { color: var(--background); display: none; }
 @media (max-width: 480px) { #space { display: unset; } }
 
 @media (max-width: 940px) {
